--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,20 @@
 [base]
 name            = iKetan
-version         = 0.1
+version         = 0.3
 description     = iKetan Discord Bot - Pre-Alpha
 owner           = KetanBasi#5473
 prefix          = ketan.
-adminPrefix     = ketan$
+admin_prefix     = ketan#
 
 [operation]
-cycleStatus     = true
+cycle_status     = false
 ; delay in ms | 1 s = 1000 ms
-CStatusDelay    = 5000
+cycle_status_delay    = 5000
+; logfile limit on workdir (default OS temp dir)
+; [ count (file count) / day / week / month / year ]
+; default: count
+logfile_limit_by = count
+; default: 100
+logfile_limit_count = 100
+; use '$' instead of '%'
+logfile_format = $Y-$m-$d $H.$M.$S
