revise some command & behavior; add chstatus command

--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,11 @@
 [base]
 name            = iKetan
 version         = 0.3
-description     = iKetan Discord Bot - Pre-Alpha
+release_version = Dev
+description     = iKetan Discord Bot
 owner           = KetanBasi#5473
 prefix          = ketan.
-admin_prefix     = ketan#
+admin_prefix    = ketan#
 
 [operation]
 cycle_status     = false
@@ -16,5 +17,5 @@ cycle_status_delay    = 5000
 logfile_limit_by = count
 ; default: 100
 logfile_limit_count = 100
-; use '$' instead of '%'
+; use '$' instead of '%' --> $Y means Year of the date and %Y means %Y
 logfile_format = $Y-$m-$d $H.$M.$S
